# windowsctl

./: Cargo.toml  README.md  build.rs  wootctl-manifest.rc
src/: constants.rs  efi_editor.rs  main.rs  privilege_elevator.rs  traits.rs
