[package]
name = "windowsctl-reboot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
clap = { version = "3.0.5", features = ["cargo", "derive"] }

[dependencies.windows]
version = "0.29.0"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
]
