[package]
name = "wootctl"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.*"
clap = { version = "3.1.*", features = ["cargo", "derive"] }
lazy_static = "1.4.*"

[dependencies.windows]
version = "0.36.*"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
embed-resource = "1.7"
